<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:focusable="auto"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:context=".application.appdetails.DetailUserActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ProgressBar
                android:id="@+id/progress_bar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

            <LinearLayout
                android:id="@+id/detail_animation_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_failed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:text="NOT FOUND"
                    android:textAlignment="center"
                    android:textSize="24sp"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.6" />


            </LinearLayout>
            <LinearLayout
                android:id="@+id/detail_data_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:orientation="vertical"
                android:visibility="visible">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="304dp">

                    <com.google.android.material.appbar.AppBarLayout
                        android:id="@+id/app_bar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <com.google.android.material.appbar.MaterialToolbar
                            android:layout_width="match_parent"
                            android:layout_height="?actionBarSize"
                            app:title="@string/app_name" />
                    </com.google.android.material.appbar.AppBarLayout>


                    <ImageView
                        android:id="@+id/detail_image"
                        android:layout_width="84dp"
                        android:layout_height="84dp"
                        android:layout_marginTop="24dp"
                        android:contentDescription="@string/profile_image"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/app_bar" />

                    <TextView
                        android:id="@+id/detail_username"
                        style="@style/TextUsernameDetailUser"
                        android:text="@string/username"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/detail_name"
                        app:layout_constraintVertical_bias="0.0" />

                    <TextView
                        android:id="@+id/detail_followers_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:drawablePadding="4dp"
                        android:text="value"
                        app:drawableStartCompat="@drawable/person_icon"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/detail_username"
                        app:layout_constraintHorizontal_bias="0.716"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.897" />

                    <TextView
                        android:id="@+id/detail_followers"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:layout_marginTop="8dp"
                        android:drawablePadding="4dp"
                        android:text="@string/followers"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toEndOf="@+id/detail_followers_value"
                        app:layout_constraintTop_toBottomOf="@+id/detail_username"
                        app:layout_constraintVertical_bias="0.081" />

                    <TextView
                        android:id="@+id/detail_following_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawablePadding="4dp"
                        android:text="value"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.177"
                        app:layout_constraintStart_toEndOf="@+id/detail_followers"
                        app:layout_constraintTop_toBottomOf="@+id/detail_username"
                        app:layout_constraintVertical_bias="0.266" />

                    <TextView
                        android:id="@+id/detail_following"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:drawablePadding="4dp"
                        android:text="@string/following"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toEndOf="@+id/detail_following_value"
                        app:layout_constraintTop_toBottomOf="@+id/detail_image"
                        app:layout_constraintVertical_bias="0.735" />

                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/detail_fab_favorite"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:layout_marginEnd="16dp"
                        android:contentDescription="@string/favorite_button"
                        app:fabSize="normal"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintStart_toEndOf="@+id/detail_image"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.29"
                        app:srcCompat="@drawable/default_fav_icon" />

                    <TextView
                        android:id="@+id/detail_name"
                        style="@style/TextNameDetailUser"
                        android:layout_marginTop="16dp"
                        android:text="@string/name"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/detail_image"
                        app:layout_constraintVertical_bias="0.009" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <com.google.android.material.tabs.TabLayout
                    android:id="@+id/detail_tabs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@color/darkModeColor"
                    android:contentDescription="@string/tabs"
                    app:tabTextColor="@color/defaultDarkModeText" />

                <androidx.viewpager2.widget.ViewPager2
                    android:id="@+id/detail_view_pager"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="?android:colorPrimary" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>